# declarch

./: .gitignore  ARCHITECTURE_REVIEW.md  AUTO_INSTALL_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOOKS-BRAINSTORM.md  HOOKS-SYNTAX-FINAL.md  HOOKS-SYNTAX-PROPOSAL.md  LICENSE  MAINTAINABILITY_ASSESSMENT.md  PKGBUILD  PKGBUILD-bin  QUICK-TEST.md  README.md  REFACTOR_PROGRESS.md  REFACTOR_v0.6_PLAN.md  RELEASE.md  RELEASE_CHECKLIST.md  RFC-0001-SIMPLE-POWER-ROADMAP.md  RFC-0002-CROSS-PLATFORM-COMPATIBILITY.md  RFC-0003-CODEBASE-QUALITY-ROADMAP.md  SESSION-SUMMARY.md  SOAR_INTEGRATION_SUMMARY.md  TESTING.md  _declarch  backends.kdl  book.toml  deny.toml  install-remote.sh  install.ps1  install.sh  release-0.4.1.sh  release-0.4.2.sh
.aur/: PKGBUILD-declarch  PKGBUILD-declarch-bin  PKGBUILD-declarch-git  README.md  RELEASE_GUIDE.md  RELEASE_HANDOFF_0.8.2.md  RELEASE_MAINTAINER.md  publish-all.sh  publish-declarch-bin.sh  publish-declarch-git.sh  publish-declarch.sh  publish.sh
.aur/scripts/: build-aur.sh  publish-aur-all.sh  publish-declarch-bin.sh  publish-declarch.sh  publish.sh  release.sh
.aur/templates/: PKGBUILD  PKGBUILD-bin  PKGBUILD-git
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-book.yml  release.yml
.opencode/: AGENTS.md
backends/: brew.kdl  bun.kdl  cargo.kdl  flatpak.kdl  npm.kdl  pacman.kdl  paru.kdl  pip.kdl  pnpm.kdl  soar.kdl  yarn.kdl
docs/: Backend-Guide.md  Backend-System.md  Examples.md  Home.md  KDL-Syntax-Reference.md  Quick-Start.md  README.md  Remote-Init-Guide.md  Repository-Requirements.md  User-Defined-Backends.md
docs-book/: book.toml
docs-book/src/: SUMMARY.md  cross-distro-support.md  intro.md
docs/advanced/: hooks.md  remote-init.md  troubleshooting.md
docs/architecture/: module-boundaries.md  pre-merge-blockers.md
docs/commands/: check.md  info.md  switch.md
docs/development/: aur-publish.md  release-guide.md
docs/getting-started/: basic-concepts.md  quick-start.md
docs/guides/: endeavouros-setup.md  examples.md  installation.md  quick-start.md  remote-init.md
docs/plans/: PHASE2-REFACTOR-PLAN.md
docs/reference/: kdl-syntax.md
docs/spec/: user-backends-plan.md
examples/: README.md  declarch.kdl  desktop.kdl  development.kdl  minimal.kdl  modular.kdl
examples/backends/: backends.kdl
examples/modules/: base.kdl
personal-docs/: MCP-PERSONAL-TESTING-GUIDE.md  RELEASE-TROUBLESHOOTING.md
plan/: README.md  cli-surface-spec-lock.md  commit-strategy.md  phase-00-baseline.md  phase-01-security-correctness.md  phase-02-maintainability-modularity.md  phase-03-performance-reliability.md  phase-04-beginner-experience.md  phase-05-release-guardrails.md  pre-merge-maturity-checklist-9.5.md  rfc-brand-abstraction-rebrand-readiness.md  rfc-flag-subcommand-surface-simplification.md  risk-register.md  rollback-map.md
release/: README.md
scripts/: benchmark_profile.sh  check_identity_literals.sh  check_release_consistency.sh  maturity_premerge_gate.sh  perf_baseline.sh  release.sh
src/: dc.rs  dcl.rs  error.rs  error_suggestions.rs  hooks_integration_test.rs  init.rs  lib.rs  main.rs  modules.rs  project_identity.rs  state.rs  system.rs  traits.rs
src/backends/: config.rs  generic.rs  integration_tests.rs  mod.rs  registry.rs  user_parser.rs
src/cli/: args.rs  commands.rs  deprecated.rs  dispatcher.rs  mod.rs
src/commands/: cache.rs  check.rs  completions.rs  edit.rs  explain.rs  ext.rs  hooks.rs  info.rs  info_reason.rs  init.rs  install.rs  lint.rs  list.rs  mod.rs  runtime_overrides.rs  search.rs  self_update.rs  settings.rs  switch.rs  sync.rs  sync_old.rs  upgrade.rs
src/config/: editor.rs  kdl.rs  kdl_tests.rs  loader.rs  mod.rs  settings.rs  types.rs
src/constants/: common.rs  critical.rs  mod.rs  package_suffixes.rs  urls.rs
src/core/: identity.rs  matcher.rs  mod.rs  resolver.rs  types.rs
src/package/: aur.rs  factory.rs  flatpak.rs  mod.rs  pacman.rs  trait_impl.rs
src/state/: io.rs  mod.rs  state_utils.rs  types.rs
src/ui/: mod.rs  progress.rs
src/utils/: aur_validation.rs  cache.rs  distro.rs  errors.rs  flatpak_validation.rs  install.rs  machine_output.rs  mod.rs  module.rs  output.rs  paths.rs  platform.rs  regex_cache.rs  (+4 more)
tests/: README.md  backend_parsers.rs  cli_suite.rs  machine_contract_snapshots.rs  mock_backend_e2e.rs  smart_matching.rs  state_restore.rs  sync_integration_tests.rs  test_custom_backends.rs
(+255 files in other folders)
