[package]
name = "declarch"
version = "0.4.2"
edition = "2024"
description = "A declarative package manager for Linux, inspired by Nix workflow"
license = "MIT"
repository = "https://github.com/nixval/declarch"
homepage = "https://github.com/nixval/declarch"
default-run = "declarch"

[dependencies]
# CLI parsing
clap = { version = "4.5.51", features = ["derive"] }

# KDL parsing
kdl = "6.5.0"

# JSON state management
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
thiserror = "2.0.17"

# Date/time (with serde support)
chrono = { version = "0.4", features = ["serde"] }

# System path info and host detection
hostname = "0.4.1"
directories = "6.0.0"
which = "8.0.0"

# UX / UI
ctrlc = "3.5.1"
colored = "3.0.0"
clap_complete = "4.5.61"
regex = "1.12.2"
reqwest = { version = "0.12.25", default-features = false, features = ["blocking", "rustls-tls"]}
shell-words = "1.1.1"



[[bin]]
name = "declarch"
path = "src/main.rs"

[[bin]]
name = "dc"
path = "src/dc.rs"

[profile.release]
lto = "thin"        # Link-time optimization: "thin" balances speed and compile time
codegen-units = 1   # Maximize optimization at cost of parallelism
opt-level = "s"     # Optimize for size
strip = true        # Remove debug symbols

# Development dependencies (only for testing/benchmarking)
[dev-dependencies]
tempfile = "3.23.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"

